// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render dialog 1`] = `
<body
  style="overflow: hidden; padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiModal-root MuiDialog-root commonDialog"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; -webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation24 MuiPaper-rounded commonDialogPaper"
      role="document"
      style="opacity: 1; -webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiDialogTitle-root"
        id="form-dialog-title"
      >
        <h2
          class="MuiTypography-root MuiTypography-title"
        >
          test
        </h2>
      </div>
      <div
        class="MuiDialogContent-root commonDialogContent"
      >
        Test Content
      </div>
      <div
        class="MuiDialogActions-root"
      >
        <div
          class="commonDialogFooter MuiDialogActions-action"
        >
          <div
            class="left"
          />
          <div
            class="right"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-flat"
              id="close"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Close
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-textPrimary MuiButton-flat MuiButton-flatPrimary"
              data-id="action-button"
              data-is-enabled="true"
              data-testid="action-button"
              id="action-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                action one
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-textPrimary MuiButton-flat MuiButton-flatPrimary"
              data-is-enabled="true"
              id="action two"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                action two
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`render multi page dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiModal-root MuiDialog-root commonDialog"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; -webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation24 MuiPaper-rounded commonDialogPaper"
      role="document"
      style="opacity: 1; -webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiDialogTitle-root"
        id="form-dialog-title"
      >
        <h2
          class="MuiTypography-root MuiTypography-title"
        >
          test
        </h2>
      </div>
      <div
        class="MuiDialogContent-root commonDialogContent"
      >
        <div
          data-testid="page"
        >
          Page 2
        </div>
      </div>
      <div
        class="MuiDialogActions-root"
      >
        <div
          class="commonDialogFooter MuiDialogActions-action"
        >
          <div
            class="left"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-flat back"
              id="back"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root margin-right-5"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </g>
                </svg>
                 Back
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="right"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-flat"
              id="close"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Close
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-textPrimary MuiButton-flat MuiButton-flatPrimary"
              data-id="action-button"
              data-is-enabled="true"
              data-testid="action-button"
              id="action-button"
              pages="1"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                action two
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
